# emqx-ft

./: .gitignore  README.md  pyproject.toml  test-file.txt
src/emqx_ft/: main.py
